--- a/docs/src/man/man1/haltcl.1.adoc
+++ b/docs/src/man/man1/haltcl.1.adoc
@@ -54,18 +54,13 @@ SECTION_B(ITEM_1) = 10
 The executable *haltcl* includes the commands of a Tcl interpreter augmented with commands for the hal language as described for *halcmd*(1).
 The augmented commands can be listed with the command:
 
-----
-haltcl: hal --commands
+`haltcl: hal --commands`+
 
-addf alias delf delsig getp gets ptype stype help linkpp linkps linksp
-list loadrt loadusr lock net newsig save setexact_for_test_suite_only
-setp sets show source start status stop unalias unlinkp unload unloadrt
-unloadusr unlock waitusr
-----
+`addf alias delf delsig getp gets ptype stype help linkpp linkps linksp list loadrt loadusr lock net newsig save setexact_for_test_suite_only setp sets show source start status stop unalias unlinkp unload unloadrt unloadusr unlock waitusr`
 
-Two of the augmented commands, 'list' and 'gets', require special
-treatment to avoid conflict with Tcl built-in commands having the same
-names. To use these commands, precede them with the keyword 'hal':
+Two of the augmented commands, 'list' and 'gets', require special treatment
+to avoid conflict with Tcl built-in commands having the same names.
+To use these commands, precede them with the keyword 'hal':
 
 ----
 hal list
