--- a/docs/src/man/man1/melfagui.1.adoc
+++ b/docs/src/man/man1/melfagui.1.adoc
@@ -6,16 +6,14 @@ melfagui - Vismach Virtual Machine GUI
 
 == DESCRIPTION
 
-*melfagui* is one of the sample *Vismach* GUIs for LinuxCNC, simulating
-a Mitsubishi serial manipulator
+*melfagui* is one of the sample *Vismach* GUIs for LinuxCNC, simulating a Mitsubishi serial manipulator.
 
-See the main LinuxCNC documentation for more details.
-
-https://linuxcnc.org/docs/html/gui/vismach.html
 
 == SEE ALSO
 
 *linuxcnc(1)*
+
+https://linuxcnc.org/docs/html/gui/vismach.html
 
 Much more information about LinuxCNC and HAL is available in the
 LinuxCNC and HAL User Manuals, found at /usr/share/doc/LinuxCNC/.
