--- a/docs/src/config/core-components.adoc
+++ b/docs/src/config/core-components.adoc
@@ -93,7 +93,7 @@ unlock_joints_mask=0x38 selects joints 3,4,5
 ----
 
 [[sec:motion-pins]]
-=== Pins(((motion (HAL pins))))
+=== Pins(((motion:HAL pins)))
 
 These pins, parameters, and functions are created by the realtime 'motmod'
 module.
