--- a/docs/src/gcode/coordinates.adoc
+++ b/docs/src/gcode/coordinates.adoc
@@ -150,15 +150,15 @@ would still be in effect.
 
 [source,{ngc}]
 ----
-G54	uses parameters of coordinate system 1(((G54)))
-G55	uses parameters of coordinate system 2(((G55)))
-G56	uses parameters of coordinate system 3(((G56)))
-G57	uses parameters of coordinate system 4(((G57)))
-G58	uses parameters of coordinate system 5(((G58)))
-G59	uses parameters of coordinate system 6(((G59)))
-G59.1	uses parameters of coordinate system 7(((G59.1)))
-G59.2	uses parameters of coordinate system 8(((G59.2)))
-G59.3	uses parameters of coordinate system 9(((G59.3)))
+G54	uses parameters of coordinate system 1
+G55	uses parameters of coordinate system 2
+G56	uses parameters of coordinate system 3
+G57	uses parameters of coordinate system 4
+G58	uses parameters of coordinate system 5
+G59	uses parameters of coordinate system 6
+G59.1	uses parameters of coordinate system 7
+G59.2	uses parameters of coordinate system 8
+G59.3	uses parameters of coordinate system 9
 ----
 
 === Default Coordinate System
