--- a/docs/src/gcode/m-code.adoc
+++ b/docs/src/gcode/m-code.adoc
@@ -697,13 +697,12 @@ parameter of the INI file) is executed with the optional P and Q values
 as its two arguments.
 
 Execution of the G-code file pauses until the external program exits.
-If the external program exits with exit code other than '0' gcode program execution is
-stopped.
+If the external program exits with exit code other than '0' G-code program execution is stopped.
 Any valid executable file can be used. The file must be located in the search
 path specified in the INI file configuration.
 See the <<sub:ini:sec:display,Display>> section for more information on search paths.
 
-After creating a new M1nn program, the GUI should be restarted so that the
+After creating a new M1__nn__ program, the GUI should be restarted so that the
 new program is taken into account, otherwise a 'Unknown M-code' error will occur.
 
 [WARNING]
@@ -714,11 +713,11 @@ in other operating systems to create or edit the files.
 
 The error 'Unknown M-code used' denotes one of the following:
 
-* The specified User Defined Command does not exist
-* The file is not an executable file
-* The file name has an extension
-* The file name does not follow this format Mnnn where nnn = 100 through 199
-* The file name used a lower case M
+* The specified User Defined Command does not exist.
+* The file is not an executable file.
+* The file name has an extension.
+* The file name does not follow this format Mnnn where nnn = 100 through 199.
+* The file name used a lower case M.
 
 For example to open and close a collet closer that is controlled by a
 parallel port pin using a bash script file using M101 and M102. Create two
