--- a/docs/src/hal/components.adoc
+++ b/docs/src/hal/components.adoc
@@ -239,11 +239,9 @@ To search in the man pages, use the UNIX tool `apropos`.
 | link:../man/man9/led_dim.9.html[led_dim]   |HAL component for dimming LEDs ||
 | link:../man/man9/lowpass.9.html[lowpass]   |Low-pass filter | |
 | link:../man/man9/limit1.9.html[limit1]     |Limits the output signal to fall between min and max. footnote:[When the input is a position, this means that the 'position' is limited.] ||
-| link:../man/man9/limit2.9.html[limit2]     |Limits the output signal to fall between min and max.  Limit its slew rate to less than maxv per second.
-footnote:[When the input is a position, this means that 'position' and 'velocity' are limited.] ||
+| link:../man/man9/limit2.9.html[limit2]     |Limits the output signal to fall between min and max.  Limit its slew rate to less than maxv per second.  footnote:[When the input is a position, this means that 'position' and 'velocity' are limited.] ||
 | link:../man/man9/limit3.9.html[limit3]     |Limit the output signal to fall between min and max.
-Limit its slew rate to less than maxv per second. Limit its second derivative to less than MaxA per second squared footnote:[When
-the input is a position, this means that 'position', 'velocity', and 'acceleration' are limited.]. ||
+Limit its slew rate to less than maxv per second. Limit its second derivative to less than MaxA per second squared footnote:[When the input is a position, this means that 'position', 'velocity', and 'acceleration' are limited.]. ||
 | link:../man/man9/lincurve.9.html[lincurve] |One-dimensional lookup table ||
 | link:../man/man9/maj3.9.html[maj3]         |Compute the majority of 3 inputs ||
 | link:../man/man9/minmax.9.html[minmax]     |Tracks the minimum and maximum values of the input to the outputs. ||
