--- a/docs/src/man/man1/gs2_vfd.1.adoc
+++ b/docs/src/man/man1/gs2_vfd.1.adoc
@@ -37,7 +37,7 @@ and writes to the GS2 via a modbus connection.
 -p, --parity [even,odd,none]::
   Set serial parity to even, odd, or none (default odd).
 
--r, --rate n::
+-r, --rate _n_::
   Set baud rate to _n_. It is an error if the rate is
   not one of the following: 110, 300, 600, 1200, 2400, 4800, 9600,
   19200, 38400, 57600, 115200 (default 38400).
@@ -45,14 +45,14 @@ and writes to the GS2 via a modbus connection.
 -s, --stopbits [1,2]::
   Set serial stop bits to 1 or 2 (default 1).
 
--t, --target <n>::
+-t, --target _n_::
   Set MODBUS target (slave) number.
   This must match the device number you set on the GS2 (default 1).
 
--A, --accel-seconds <n>::
+-A, --accel-seconds _n_::
   Seconds to accelerate the spindle from 0 to Max RPM (default 10.0).
 
--D, --decel-seconds <n>::
+-D, --decel-seconds _n_::
   Seconds to decelerate the spindle from Max RPM to 0.
   If set to 0.0 the spindle will be allowed to coast to a stop without
   controlled deceleration (default 0.0).
