--- a/docs/src/man/man9/hm2_rpspi.9.adoc
+++ b/docs/src/man/man9/hm2_rpspi.9.adoc
@@ -11,7 +11,6 @@ firmware.
 
 *loadrt hm2_rpspi*
 
-____
 *config* [default: ""]::
   HostMot2 config strings, described in the *hostmot2*(9) manpage.
 *spiclk_rate* [default: 31250]::
@@ -38,29 +37,31 @@ ____
   2 means pull-up. The chip enable line(s) are always pull-up enabled.
 *spi_probe* [default: 1]::
   Probe SPI port and CE lines for a card. This is a bit-field indicating
-  which combinations of SPI and CE should be probed: - 1 = SPI0/CE0, - 2
-  = SPI0/CE1, - 4 = SPI1/CE0, - 8 = SPI1/CE1, - 16 = SPI1/CE2.
+  which combinations of SPI and CE should be probed:
+  - 1 = SPI0/CE0,
+  - 2 = SPI0/CE1,
+  - 4 = SPI1/CE0,
+  - 8 = SPI1/CE1,
+  - 16 = SPI1/CE2.
 
 The probe is performed exactly in above order. Any boards found will be
-numbered 0...4 in the order found. See also *INTERFACE CONFIGURATION*
-below.
+numbered 0...4 in the order found. See also *INTERFACE CONFIGURATION* below.
 
 It is an error if a probe fails and the driver will abort. The SPI0/SPI1
 peripherals are located at GPIO pins (with 40-pin I/O header pin-number
-in parentheses): - SPI0: MOSI=10(19), MISO=9(21), SCLK=11(23),
-CE0=8(24), CE1=7(26) - SPI1: MOSI=20(38), MISO=19(35), SCLK=21(40),
-CE0=18(12), CE1=17(11), CE2=16(36)
+in parentheses):
+ - SPI0: MOSI=10(19), MISO=9(21), SCLK=11(23), CE0=8(24), CE1=7(26)
+ - SPI1: MOSI=20(38), MISO=19(35), SCLK=21(40), CE0=18(12), CE1=17(11), CE2=16(36)
 
 *spi_debug* [default: -1]::
-  Set the message level of the running process. The message level is set
-  if *spi_debug* is set to a positive value between 0 and 5, where 0
-  means no messages at all and 5 means everything. A value of -1 does
-  not touch the current message level.
+  Set the message level of the running process.
+  The message level is set if *spi_debug* is set to a positive value between 0 and 5,
+  where 0 means no messages at all and 5 means everything.
+  A value of -1 does not touch the current message level.
 
-Caveat Emptor: changing the message level is process-wide and all
-modules within the process will spit out messages at the requested
-level. This may cause quite some clutter in your terminal.
-____
+Caveat Emptor: Changing the message level is process-wide and all
+modules within the process will spit out messages at the requested level.
+This may cause quite some clutter in your terminal.
 
 == DESCRIPTION
 
@@ -161,19 +162,18 @@ direction only).
 
 Writing to the 7i90 may be done faster than reading. This is especially
 important if you have "long" wires or any buffers on the SPI-bus path.
-You can set the read clock frequency to a lower value (using
-*spiclk_rate_rd*) to counter the effects of the SPI-bus round-trip
-needed for read actions. For example, you can write at 41.67&#8239;MHz and
-read at 25.00&#8239;MHz.
+You can set the read clock frequency to a lower value (using *spiclk_rate_rd*)
+to counter the effects of the SPI-bus round-trip needed for read actions.
+For example, you can write at 41.67&#8239;MHz and read at 25.00&#8239;MHz.
 
 It should be noted that the Rpi3 *must* have an adequate 5V power supply
-and the power should be properly decoupled right on the 40-pin I/O
-header. At high speeds and noise on the supply, there is the possibility
-of noise throwing off the SoC's PLL(s), resulting in strange behaviour.
+and the power should be properly decoupled right on the 40-pin I/O header.
+At high speeds and noise on the supply, there is the possibility of noise
+throwing off the SoC's PLL(s), resulting in strange behaviour.
 
 For optimal performance on the Rpi3, you must disable the "ondemand" CPU
-frequency governor. You may add the following to your /etc/rc.local
-file:
+frequency governor. You may add the following to your /etc/rc.local file:
+
 ```
 echo -n 1200000 > /sys/devices/system/cpu/cpufreq/policy0/scaling_min_freq
 echo -n performance > /sys/devices/system/cpu/cpufreq/policy0/scaling_governor
