--- a/docs/src/man/man9/rosekins.9.adoc
+++ b/docs/src/man/man9/rosekins.9.adoc
@@ -10,9 +10,9 @@ rosekins - Kinematics for a rose engine
 
 == KINEMATICS
 
-joint_0 linear,
-transverse (perpendicular to spindle) joint_1 linear,
-longitudinal (parallel to spindle identity to z) joint_2 rotary,
+joint_0 linear, +
+transverse (perpendicular to spindle) joint_1 linear, +
+longitudinal (parallel to spindle identity to z) joint_2 rotary, +
 spindle (workholding, not tool holding, e.g. not a highspeed spindle)
 
 == PINS
