--- a/docs/src/man/man9/sserial.9.adoc
+++ b/docs/src/man/man9/sserial.9.adoc
@@ -32,56 +32,61 @@ three per-port pins and three parameters.
 
 *Pins:*
 
-.sserial.port-__N__.run (bit, in):: Enables the specific Smart Serial module.
- Setting this pin low will disable all boards on the port and puts the
- port in a pass-through mode where device parameter setting is possible.
- It is necessary to toggle the state of this pin if there is a
- requirement to alter a remote parameter on a live system.
- This pin defaults to TRUE and can be left unconnected.
- However, toggling the pin low-to-high will re-enable a faulted drive,
- so the pin could usefully be connected to the `iocontrol.0.user-enable-out` pin.
+.sserial.port-__N__.run (bit, in)::
+  Enables the specific Smart Serial module.
+  Setting this pin low will disable all boards on the port and puts the
+  port in a pass-through mode where device parameter setting is possible.
+  It is necessary to toggle the state of this pin if there is a
+  requirement to alter a remote parameter on a live system.
+  This pin defaults to TRUE and can be left unconnected.
+  However, toggling the pin low-to-high will re-enable a faulted drive,
+  so the pin could usefully be connected to the `iocontrol.0.user-enable-out` pin.
 
 .run_state (u32, ro)::
- Shows the state of the sserial communications state-machine.
- This pin will generally show a value of 0x03 in normal operation,
- 0x07 in setup mode and 0x00 when the "run" pin is false.
+  Shows the state of the sserial communications state-machine.
+  This pin will generally show a value of 0x03 in normal operation,
+  0x07 in setup mode and 0x00 when the "run" pin is false.
 
 .error-count (u32, ro)::
- Indicates the state of the Smart Serial error handler,
- see the parameters section for more details.
+  Indicates the state of the Smart Serial error handler,
+  see the parameters section for more details.
 
 *Parameters:*
 
-.fault-inc (u32 r/w):: Any over-run or handshaking error in the
- SmartSerial communications will increment the .fault-count pin by the
- amount specified by this parameter. Default = 10.
+.fault-inc (u32 r/w)::
+  Any over-run or handshaking error in the
+  SmartSerial communications will increment the .fault-count pin by the
+  amount specified by this parameter. Default = 10.
 
-.fault-dec (u32 r/w):: Every successful read/write cycle decrements the
- fault counter by this amount. Default = 1.
+.fault-dec (u32 r/w)::
+  Every successful read/write cycle decrements the
+  fault counter by this amount. Default = 1.
 
-.fault-lim (u32 r/w):: When the fault counter reaches this threshold the
- Smart Serial interface on the corresponding port will be stopped and an
- error printed in dmesg. Together these three pins allow for control over
- the degree of fault- tolerance allowed in the interface. The default
- values mean that if more than one transaction in ten fails, more than 20
- times, then a hard error will be raised. If the increment were to be set
- to zero then no error would ever be raised, and the system would carry
- on regardless. Conversely setting decrement to zero, threshold to 1 and
- limit to 1 means that absolutely no errors will be tolerated. (This
- structure is copied directly from vehicle ECU practice.)
+.fault-lim (u32 r/w)::
+  When the fault counter reaches this threshold the
+  Smart Serial interface on the corresponding port will be stopped and an
+  error printed in dmesg. Together these three pins allow for control over
+  the degree of fault- tolerance allowed in the interface. The default
+  values mean that if more than one transaction in ten fails, more than 20
+  times, then a hard error will be raised. If the increment were to be set
+  to zero then no error would ever be raised, and the system would carry
+  on regardless. Conversely setting decrement to zero, threshold to 1 and
+  limit to 1 means that absolutely no errors will be tolerated. (This
+  structure is copied directly from vehicle ECU practice.)
 
 Any other parameters than the ones above are created by the card itself
 from data in the remote firmware. They may be set in the HAL file using
 "setp" in the usual way.
 
-NOTE: Because a Smart-Serial remote can only communicate non-process
- data to the host card in setup mode, it is necessary to stop and
- re-start the smart-serial port associated with the card to alter the
- value of a parameter.
+[NOTE]
+====
+Because a Smart-Serial remote can only communicate non-process
+data to the host card in setup mode, it is necessary to stop and
+re-start the smart-serial port associated with the card to alter the
+value of a parameter.
+====
 
-NOTE: in the case of parameters beginning with "nv" (which are
- stored in non-volatile memory) the effect will not be seen until after
- the next power cycle of the drive.
+NOTE: In the case of parameters beginning with "nv" (which are stored in non-volatile memory) the effect will not be seen until after the next power cycle of the drive.
 
 Unchanged values will not be re-written so it is safe to leave the
 "setp" commands in the HAL file or delete them as you see fit.
@@ -171,7 +176,7 @@ max_current (float, rw):: Sets the maximum drive current in Amps.
  The default value is the maximum current programmed into the drive EEPROM.
  The value must be positive, and an error will be raised if a current in excess of the
  drive maximum is requested.
-serial_number (u32, ro):: The serial number of the connected drive
+serial_number (u32, ro):: The serial number of the connected drive.
  This is also shown on the label on the drive.
 
 === 7I64
@@ -229,12 +234,13 @@ whereas the smart-serial pins are associated with the 7I76 (`hm2_5i25.0.7i76.0.0
 .7i76.0.0.nvbaudrate (u32 ro):: Indicates the vbaud rate. This probably should not be altered.
 
 .7i76.0.0.nvunitnumber (u32 ro)::
- Indicates the serial number of the device and should match a sticker on the card.
- This can be useful for working out which card is which.
+  Indicates the serial number of the device and should match a sticker on the card.
+  This can be useful for working out which card is which.
 
-.7i76.0.0.nvwatchdogtimeout (u32 ro):: The sserial remote watchdog timeout.
- This is separate from the Anything-IO card timeout.
- This is unlikely to need to be changed.
+.7i76.0.0.nvwatchdogtimeout (u32 ro)::
+  The sserial remote watchdog timeout.
+  This is separate from the Anything-IO card timeout.
+  This is unlikely to need to be changed.
 
 .7i76.0.0.output-__NN__-invert (bit rw):: Invert the sense of the corresponding output pin.
 
@@ -251,8 +257,7 @@ whereas the smart-serial pins are associated with the 7I76 (`hm2_5i25.0.7i76.0.0
   For example with a 10 V drive voltage and a 10000 RPM scalemax a value of 10,000 RPM on the spinout pin would produce 10 V output.
   However, if spinout-maxlim were set to 5000 RPM then no voltage above 5 V would be output.
 
-.7i76.0.0.swrevision (u32 ro):: The onboard firmware revision number.
-  Utilities (man setsserial for details) exist to update and change this firmware.
+.7i76.0.0.swrevision (u32 ro):: The onboard firmware revision number.  Utilities (man setsserial for details) exist to update and change this firmware.
 
 === 7I77
 
@@ -263,52 +268,32 @@ encoders and further details of them may be found in the hostmot2 manpage.
 *Pins:*
 
 .7i77.0.0.input-__NN__ (bit out):: (_NN_ = 0 to 31) 32 digital inputs.
-
-.7i77.0.0.input-__NN__-not (bit in):: (_NN_ = 0 to 31) An inverted copy of the
- inputs provided for convenience. The two complementary pins may be
- connected to different signal nets.
-
-.7i77.0.0.output-__NN__ (bit out):: (_NN_ = 0 to 15). 16 digital outputs.
- The sense of the signal can be set via a parameter.
-
-.7i77.0.0.spindir (bit in):: This pin provides a means to drive the
- spindle VFD direction terminals on the 7I76 board.
-
+.7i77.0.0.input-__NN__-not (bit in):: (_NN_ = 0 to 31) An inverted copy of the inputs provided for convenience. The two complementary pins may be connected to different signal nets.
+.7i77.0.0.output-__NN__ (bit out):: (_NN_ = 0 to 15). 16 digital outputs.  The sense of the signal can be set via a parameter.
+.7i77.0.0.spindir (bit in):: This pin provides a means to drive the spindle VFD direction terminals on the 7I76 board.
 .7i77.0.0.spinena (bit in):: This pin drives the spindle-enable terminals on the 7I76 board.
-
-.7i77.0.0.spinout (float in):: This controls the analog output of the 7I77.
- This is intended as a speed control signal for a VFD.
-
+.7i77.0.0.spinout (float in):: This controls the analog output of the 7I77.  This is intended as a speed control signal for a VFD.
 .7i77.0.1.analogena (bit in):: This pin drives the analog enable terminals on the 7I77 board.
-
 .7i77.0.1.analogout__N__ (float in):: (_N_ = 0 to 5) This controls the analog output of the 7I77.
 
 *Parameters:*
 
 .7i77.0.0.output-__NN__-invert (bit rw):: Invert the sense of the corresponding output pin.
-
 .7i77.0.0.spindir-invert (bit rw):: Invert the sense of the spindle direction pin.
-
 .7i77.0.0.spinena-invert (bit rw):: Invert the sense of the spindle-enable pin.
-
 .7i77.0.0.spinout-maxlim (float rw):: The maximum speed request allowable
-
 .7i77.0.0.spinout-minlim (float rw):: The minimum speed request.
-
-.7i77.0.0.spinout-scalemax (float rw):: The spindle speed scaling.
- This is the speed request which would correspond to full-scale output from the spindle control pin.
- For example with a 10&#8201;V drive voltage and a 10000&#8201;RPM scalemax
- a value of 10000&#8201;RPM on the spinout pin would produce 10&#8201;V output.
- However, if spinout-maxlim were set to 5000&#8201;RPM then no voltage above 5&#8201;V would be output.
-
+.7i77.0.0.spinout-scalemax (float rw)::
+  The spindle speed scaling.
+  This is the speed request which would correspond to full-scale output from the spindle control pin.
+  For example with a 10&#8201;V drive voltage and a 10000&#8201;RPM scalemax a value of 10000&#8201;RPM on the spinout pin would produce 10&#8201;V output.
+  However, if spinout-maxlim were set to 5000&#8201;RPM then no voltage above 5&#8201;V would be output.
 .7i77.0.0.analogout__N__-maxlim (float rw):: (_N_ = 0 to 5) The maximum speed request allowable
-
 .7i77.0.0.analogout__N__-minlim (float rw):: (_N_ = 0 to 5) The minimum speed request.
-
 .7i77.0.0.analogout__N__-scalemax (float rw):: (_N_ = 0 to 5) The analog speed scaling.
- This is the speed request which would correspond to full-scale output from the spindle control pin.
- For example with a 10&#8201;V drive voltage and a 10000&#8201;RPM scalemax a value of 10000&#8201;RPM on the spinout pin would produce 10V output.
- However, if spinout-maxlim were set to 5000&#8201;RPM then no voltage above 5&#8201;V would be output.
+  This is the speed request which would correspond to full-scale output from the spindle control pin.
+  For example with a 10&#8201;V drive voltage and a 10000&#8201;RPM scalemax a value of 10000&#8201;RPM on the spinout pin would produce 10V output.
+  However, if spinout-maxlim were set to 5000&#8201;RPM then no voltage above 5&#8201;V would be output.
 
 === 7I69
 
@@ -332,21 +317,16 @@ the corresponding Parameter.
 
 *Parameters:*
 
-.7i69.0.0.nvbaudrate (u32 ro):: Indicates the vbaud rate.
-This probably should not be altered.
-
-.7i69.0.0.nvunitnumber (u32 ro):: Indicates the serial number of the
- device and should match a sticker on the card. This can be useful for
- working out which card is which.
+.7i69.0.0.nvbaudrate (u32 ro):: Indicates the vbaud rate.  This probably should not be altered.
+.7i69.0.0.nvunitnumber (u32 ro)::
+  Indicates the serial number of the device and should match a sticker on the card.
+  This can be useful for working out which card is which.
 
 .7i69.0.0.nvwatchdogtimeout (u32 ro):: The sserial remote watchdog timeout.
- This is separate from the Anything-IO card timeout.
- This is unlikely to need to be changed.
-
+  This is separate from the Anything-IO card timeout.
+  This is unlikely to need to be changed.
 .7i69.0.0.output-__NN__-invert (bit rw):: Invert the sense of the corresponding output pin.
-
-.7i69.0.0.swrevision (u32 ro):: The onboard firmware revision number.
- Utilities exist to update and change this firmware.
+.7i69.0.0.swrevision (u32 ro):: The onboard firmware revision number.  Utilities exist to update and change this firmware.
 
 === 7I70
 
@@ -369,30 +349,18 @@ MODE 2:: Input plus field voltage
 *Pins:*
 
 .7i70.0.0.analog__N__ (modes 1 and 2 only) (float out):: Analogue input values.
-
 .7i70.0.0.fieldvoltage (mode 2 only) (float out):: Field voltage monitoring pin.
-
 .7i70.0.0.input-__NN__ (bit out):: (_NN_ = 0 to 47) 48 digital inputs.
-
 .7i70.0.0.input-__NN__-not (bit in):: (_NN_ = 0 to 47) An inverted copy of the
 inputs provided for convenience. The two complementary pins may be
 connected to different signal nets.
 
 *Parameters:*
 
-.7i70.0.0.nvbaudrate (u32 ro):: Indicates the vbaud rate.
- This probably should not be altered.
-
-.7i70.0.0.nvunitnumber (u32 ro):: Indicates the serial number of the
- device and should match a sticker on the card.
- This can be useful for working out which card is which.
-
-.7i70.0.0.nvwatchdogtimeout (u32 ro):: The sserial remote watchdog timeout.
- This is separate from the Anything-IO card timeout.
- This is unlikely to need to be changed.
-
-.7i69.0.0.swrevision (u32 ro):: The onboard firmware revision number.
- Utilities exist to update and change this firmware.
+.7i70.0.0.nvbaudrate (u32 ro):: Indicates the vbaud rate.  This probably should not be altered.
+.7i70.0.0.nvunitnumber (u32 ro):: Indicates the serial number of the device and should match a sticker on the card.  This can be useful for working out which card is which.
+.7i70.0.0.nvwatchdogtimeout (u32 ro):: The sserial remote watchdog timeout.  This is separate from the Anything-IO card timeout.  This is unlikely to need to be changed.
+.7i69.0.0.swrevision (u32 ro):: The onboard firmware revision number.  Utilities exist to update and change this firmware.
 
 === 7I71
 
@@ -420,20 +388,10 @@ MODE 1:: Outputs plus read back field voltage
 *Parameters:*
 
 .7i71.0.0.output-__NN__-invert (bit rw):: Invert the sense of the corresponding output pin.
-
-.7i71.0.0.nvbaudrate (u32 ro):: Indicates the vbaud rate.
- This probably should not be altered.
-
-.7i71.0.0.nvunitnumber (u32 ro):: Indicates the serial number of the
- device and should match a sticker on the card.
- This can be useful for determining which card is which.
-
-.7i71.0.0.nvwatchdogtimeout (u32 ro):: The sserial remote watchdog timeout.
- This is separate from the Anything-IO card timeout.
- This is unlikely to need to be changed.
-
-.7i69.0.0.swrevision (u32 ro):: The onboard firmware revision number.
- Utilities exist to update and change this firmware.
+.7i71.0.0.nvbaudrate (u32 ro):: Indicates the vbaud rate.  This probably should not be altered.
+.7i71.0.0.nvunitnumber (u32 ro):: Indicates the serial number of the device and should match a sticker on the card.  This can be useful for determining which card is which.
+.7i71.0.0.nvwatchdogtimeout (u32 ro):: The sserial remote watchdog timeout.  This is separate from the Anything-IO card timeout.  This is unlikely to need to be changed.
+.7i69.0.0.swrevision (u32 ro):: The onboard firmware revision number.  Utilities exist to update and change this firmware.
 
 === 7I73
 
@@ -457,17 +415,17 @@ MODE 2:: I/O + ENCODER + ANALOG IN FAST DISPLAY
 
 *Pins:*
 
-.7i73.0.0.analogin__N__ (float out):: Analogue inputs. Up to 8 channels may
- be available dependent on software and hardware configuration modes
- (see the PDF manual downloadable from https://www.mesanet.com).
+.7i73.0.0.analogin__N__ (float out)::
+  Analogue inputs. Up to 8 channels may
+  be available dependent on software and hardware configuration modes
+  (see the PDF manual downloadable from https://www.mesanet.com).
 
-.7i73.0.1.display (modes 1 and 2) (u32 in):: Data for LCD display.
- This pin may be conveniently driven by the HAL "lcd" component which allows
- the formatted display of the values any number of HAL pins and textual content.
+.7i73.0.1.display (modes 1 and 2) (u32 in)::
+  Data for LCD display.
+  This pin may be conveniently driven by the HAL "lcd" component which allows
+  the formatted display of the values any number of HAL pins and textual content.
 
-.7i73.0.1.display32 (mode 2 only) (u32 in):: 4 bytes of data for LCD display.
- This mode is not supported by the HAL "lcd" component.
-
+.7i73.0.1.display32 (mode 2 only) (u32 in):: 4 bytes of data for LCD display.  This mode is not supported by the HAL "lcd" component.
 .7i73.0.1.encN (s32 out):: The position of the MPG encoder counters.
 .7i73.0.1.input-__NN__ (bit out):: Up to 24 digital inputs (dependent on config)
 .7i73.0.1.input-__NN__-not (bit out):: Inverted copy of the digital inputs
